--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
@@ -203,11 +203,16 @@
 		<dependency>
 			<groupId>be.nabu.libs.tasks</groupId>
 			<artifactId>tasks-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.tasks</groupId>
 			<artifactId>tasks-queues-database</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>be.nabu.libs.tasks</groupId>
+			<artifactId>tasks-queues-cache</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -244,7 +249,7 @@
 		<dependency>
 			<groupId>be.nabu.libs.datastore</groupId>
 			<artifactId>datastore-resources</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.channels</groupId>
