--- a/pom.xml
+++ b/pom.xml
@@ -30,32 +30,12 @@
 	<dependencies>
 		<dependency>
 			<groupId>be.nabu.utils</groupId>
-			<artifactId>utils-io</artifactId>
-			<version>1.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.utils</groupId>
-			<artifactId>utils-codec</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-security</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-security-resources</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.utils</groupId>
-			<artifactId>utils-mime</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.utils</groupId>
-			<artifactId>utils-xml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
@@ -80,30 +60,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>be.nabu.libs.converter</groupId>
-			<artifactId>converter-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.converter</groupId>
-			<artifactId>converter-base</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-
-		<dependency>
-			<groupId>be.nabu.libs.types</groupId>
-			<artifactId>types-binding-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-xml</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-flat</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
@@ -111,16 +75,6 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>be.nabu.libs.types</groupId>
-			<artifactId>types-api</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.types</groupId>
-			<artifactId>types-base</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-java</artifactId>
@@ -131,29 +85,18 @@
 			<artifactId>types-uml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-xml</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>be.nabu.libs.types</groupId>
-			<artifactId>types-definition-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-definition-xsd</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>be.nabu.libs.services</groupId>
-			<artifactId>services-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.services</groupId>
 			<artifactId>services-pojo</artifactId>
@@ -177,20 +120,10 @@
 
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
-			<artifactId>resources-api</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-file</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>be.nabu.libs.events</groupId>
-			<artifactId>events-api</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.events</groupId>
 			<artifactId>events-impl</artifactId>
@@ -209,52 +142,22 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<!-- Task system -->
-		<dependency>
-			<groupId>be.nabu.libs.tasks</groupId>
-			<artifactId>tasks-api</artifactId>
-			<version>1.1-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.tasks</groupId>
-			<artifactId>tasks-queues-database</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.tasks</groupId>
-			<artifactId>tasks-queues-cache</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.tasks</groupId>
-			<artifactId>tasks-remote</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+		<!-- Broker -->
 		<dependency>
 			<groupId>be.nabu.eai</groupId>
 			<artifactId>eai-broker</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>be.nabu.libs.datastore</groupId>
-			<artifactId>datastore-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+
 		<dependency>
 			<groupId>be.nabu.libs.datastore</groupId>
 			<artifactId>datastore-urn-database</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.datatransactions</groupId>
-			<artifactId>datatransactions-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.datatransactions</groupId>
 			<artifactId>datatransactions-database</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.datastore</groupId>
@@ -263,13 +166,8 @@
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.channels</groupId>
-			<artifactId>channels-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.channels</groupId>
 			<artifactId>channels-resources</artifactId>
-			<version>1.0-SNAPSHOT</version>
+			<version>1.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -277,12 +175,7 @@
 			<artifactId>eai-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
-		
-		<dependency>
-			<groupId>be.nabu.glue</groupId>
-			<artifactId>glue-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
+
 		<dependency>
 			<groupId>be.nabu.glue</groupId>
 			<artifactId>glue</artifactId>
