--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
 			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>be.nabu.libs.resources</groupId>
+			<artifactId>resources-alias</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>be.nabu.libs.events</groupId>
 			<artifactId>events-impl</artifactId>
 			<version>1.1-SNAPSHOT</version>
