--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,12 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
+		<dependency>
+			<groupId>be.nabu.libs.cache</groupId>
+			<artifactId>cache-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
