--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
+			<artifactId>resources-remote</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-alias</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
