--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,16 @@
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.http</groupId>
+			<artifactId>http-server-websockets</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>be.nabu.libs.http</groupId>
+			<artifactId>http-client-websockets</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>be.nabu.libs.http</groupId>
 			<artifactId>http-glue</artifactId>
 			<version>1.1-SNAPSHOT</version>
 		</dependency>
