--- a/pom.xml
+++ b/pom.xml
@@ -163,6 +163,11 @@
 			<artifactId>types-binding-json</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>be.nabu.libs.types</groupId>
+			<artifactId>types-binding-form</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<!-- Type definition bindings -->
 		<dependency>
