--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
 		
 		<dependency>
 			<groupId>be.nabu.libs.metrics</groupId>
-			<artifactId>metrics-codahale</artifactId>
+			<artifactId>metrics-core</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
