--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
 		</dependency>
 
 		<!-- Glue dependencies -->
-		<dependency>
+		<!-- <dependency>
 			<groupId>be.nabu.glue</groupId>
 			<artifactId>glue</artifactId>
 			<version>1.0-SNAPSHOT</version>
@@ -208,7 +208,7 @@
 			<groupId>be.nabu.libs.http</groupId>
 			<artifactId>http-glue</artifactId>
 			<version>1.1-SNAPSHOT</version>
-		</dependency>
+		</dependency> -->
 
 		<dependency>
 			<groupId>be.nabu.libs.cache</groupId>
