--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
 		<!-- Type definition bindings -->
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
-			<artifactId>types-definition-xsd</artifactId>
+			<artifactId>types-definition-xml</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
@@ -180,11 +180,6 @@
 		<dependency>
 			<groupId>be.nabu.libs.services</groupId>
 			<artifactId>services-jdbc</artifactId>
-			<version>1.0-SNAPSHOT</version>
-		</dependency>
-		<dependency>
-			<groupId>be.nabu.libs.services</groupId>
-			<artifactId>services-wsdl</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
