--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,18 @@
 			<artifactId>artifacts-maven</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		
+		<!-- evaluator -->
+		<dependency>
+			<groupId>be.nabu.libs.evaluator</groupId>
+			<artifactId>evaluator-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>be.nabu.libs.evaluator</groupId>
+			<artifactId>evaluator-types</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>be.nabu.libs.metrics</groupId>
