--- a/pom.xml
+++ b/pom.xml
@@ -178,6 +178,11 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
+			<groupId>be.nabu.libs.services</groupId>
+			<artifactId>services-mask</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
 			<groupId>be.nabu.libs.cache</groupId>
 			<artifactId>cache-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
