--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,27 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jarsigner-plugin</artifactId>
+				<version>1.4</version>
+				<executions>
+					<execution>
+						<id>sign</id>
+						<goals>
+							<goal>sign</goal>
+							<goal>verify</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<keystore>${sign.keystore}</keystore>
+					<alias>${sign.alias}</alias>
+					<storepass>${sign.storepass}</storepass>
+					<keypass>${sign.keypass}</keypass>
+					<tsa>${sign.tsa}</tsa>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
