--- a/pom.xml
+++ b/pom.xml
@@ -5,44 +5,23 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>be.nabu.eai</groupId>
 	<artifactId>eai-repository</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>${be.nabu.eai-eai-repository-version}</version>
 	<name>eai-repository</name>
 
+	<parent>
+		<groupId>be.nabu</groupId>
+		<artifactId>core</artifactId>
+		<version>1.0-SNAPSHOT</version>
+	</parent>
+	
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.7</version>
-				<extensions>true</extensions>
-			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
 					<source>1.8</source>
 					<target>1.8</target>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jarsigner-plugin</artifactId>
-				<version>1.4</version>
-				<executions>
-					<execution>
-						<id>sign</id>
-						<goals>
-							<goal>sign</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<keystore>${sign.keystore}</keystore>
-					<alias>${sign.alias}</alias>
-					<storepass>${sign.storepass}</storepass>
-					<keypass>${sign.keypass}</keypass>
-					<tsa>${sign.tsa}</tsa>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -60,165 +39,137 @@
 		<dependency>
 			<groupId>be.nabu.eai</groupId>
 			<artifactId>eai-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-security</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-security-resources</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.http</groupId>
 			<artifactId>http-server</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.http</groupId>
 			<artifactId>http-server-websockets</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.http</groupId>
 			<artifactId>http-client-websockets</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-file</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-zip</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-remote</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.resources</groupId>
 			<artifactId>resources-alias</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.events</groupId>
 			<artifactId>events-impl</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Maven dependencies -->
 		<dependency>
 			<groupId>be.nabu.libs.maven</groupId>
 			<artifactId>maven-repository</artifactId>
-			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.maven</groupId>
 			<artifactId>maven-server</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.artifacts</groupId>
 			<artifactId>artifacts-maven</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- evaluator -->
 		<dependency>
 			<groupId>be.nabu.libs.evaluator</groupId>
 			<artifactId>evaluator-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.evaluator</groupId>
 			<artifactId>evaluator-types</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
 			<groupId>be.nabu.libs.metrics</groupId>
 			<artifactId>metrics-core</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- The different type implementations -->
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-java</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-mask</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-map</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-structure</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Type data bindings -->
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-xml</artifactId>
-			<version>1.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-flat</artifactId>
-			<version>1.2-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-json</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-form</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Service implementations -->
 		<dependency>
 			<groupId>be.nabu.libs.services</groupId>
 			<artifactId>services-pojo</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.services</groupId>
 			<artifactId>services-mask</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>be.nabu.libs.cache</groupId>
 			<artifactId>cache-api</artifactId>
-			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
 		<!-- Logging -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.6.4</version>
 		</dependency>
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.2</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 </project>
