- remove flat type binding from build - added better support for global permission and role handling - added combined future support - added daemon support to thread factory - made translation category optional

--- a/pom.xml
+++ b/pom.xml
@@ -126,10 +126,10 @@
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-xml</artifactId>
 		</dependency>
-		<dependency>
+		<!--<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-flat</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>be.nabu.libs.types</groupId>
 			<artifactId>types-binding-json</artifactId>
