- added service runtime forking support - added zipping of full entry to copy/paste entire directories - fixed log appending to be asynchronous - added broken reference updating for jaxb artifacts - allow refreshes without refreshing data

--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 	</build>
 
 	<dependencies>
+		<dependency>
+			<groupId>be.nabu.libs.cluster</groupId>
+			<artifactId>cluster-api</artifactId>
+		</dependency>
+		
 		<!-- General dependencies -->
 		<dependency>
 			<groupId>be.nabu.eai</groupId>
