--- a/pom.xml
+++ b/pom.xml
@@ -181,9 +181,9 @@
 		</dependency>
 		
 		<dependency>
-			<groupId>org.codehaus.woodstox</groupId>
-			<artifactId>woodstox-core-lgpl</artifactId>
-			<version>4.1.1</version>
+			<groupId>com.fasterxml.woodstox</groupId>
+			<artifactId>woodstox-core</artifactId>
+			<version>6.0.1</version>
 			<exclusions>
 				<exclusion>
 					<groupId>javax.xml.stream</groupId>
