--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,11 @@
 			<groupId>be.nabu.utils</groupId>
 			<artifactId>utils-cep</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>be.nabu.libs.tracer</groupId>
+			<artifactId>tracer-api</artifactId>
+		</dependency>
 
 		<!-- Logging -->
 		<dependency>
